--- a/Homework3/homework-practice-09-em-ValeevArslan.ipynb
+++ b/Homework3/homework-practice-09-em-ValeevArslan.ipynb
@@ -790,7 +790,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 64,
       "metadata": {
         "id": "ZJzvkNuQT0qY"
       },
@@ -851,7 +851,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 65,
       "metadata": {
         "id": "KEb2VJOJT0qZ"
       },
@@ -860,7 +860,8 @@
         "from preprocessing import get_token_to_index, tokenize_sents\n",
         "\n",
         "t_idx_src, t_idx_tgt = get_token_to_index(all_sentences)\n",
-        "tokenized_sentences = tokenize_sents(all_sentences, t_idx_src, t_idx_tgt)"
+        "tokenized_sentences = tokenize_sents(all_sentences, t_idx_src, t_idx_tgt)\n",
+        "len_tok_sents = len(tokenized_sentences)"
       ]
     },
     {
@@ -1128,20 +1129,6 @@
         "**https://contest.yandex.ru/contest/60281/run-report/113329121/**\n",
         "\n",
         "---"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 17,
-      "metadata": {
-        "id": "Oow6vg3gT0qd"
-      },
-      "outputs": [],
-      "source": [
-        "from importlib import reload\n",
-        "import models\n",
-        "\n",
-        "models = reload(models)"
       ]
     },
     {
@@ -1881,13 +1868,93 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 66,
       "metadata": {
         "id": "-6M-UtBlT0qm"
       },
       "outputs": [],
       "source": [
-        "# (੭•̀ω•́)੭̸*✩⁺˚"
+        "# (੭•̀ω•́)੭̸*✩⁺˚\n",
+        "import glob\n",
+        "from preprocessing import extract_sentences\n",
+        "\n",
+        "all_sentences = []\n",
+        "all_targets = []\n",
+        "# (´◕▽◕)⊃━☆\n",
+        "\n",
+        "for file in glob.glob('data/*/*/*.wa'):\n",
+        "    sents, targ = extract_sentences(file, True) # normalizing tokens\n",
+        "    all_sentences += sents\n",
+        "    all_targets += targ"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 67,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from preprocessing import get_token_to_index, tokenize_sents\n",
+        "\n",
+        "t_idx_src, t_idx_tgt = get_token_to_index(all_sentences)\n",
+        "tokenized_sentences = tokenize_sents(all_sentences, t_idx_src, t_idx_tgt)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 68,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "execution_count": 68,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "num_deleted_sents = len_tok_sents - len(tokenized_sentences)\n",
+        "num_deleted_sents"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 69,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from models import WordAligner\n",
+        "\n",
+        "word_aligner = WordAligner(len(t_idx_src), len(t_idx_tgt), 20)\n",
+        "\n",
+        "# word_aligner._e_step(tokenized_sentences)\n",
+        "hist = word_aligner.fit(tokenized_sentences, verbose=0)\n",
+        "\n",
+        "# ༼つ ಠ益ಠ༽つ ─=≡ΣO))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 70,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "0.565740944621821"
+            ]
+          },
+          "execution_count": 70,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "compute_aer(all_targets, word_aligner.align(tokenized_sentences))"
       ]
     },
     {
